force-app/main/default/objects/OrderProduct__c/fields/OrderIssued__c.field-meta.xml
<CustomField>
    <fullName>OrderIssued__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para relacionamento com o Pedido Emitido.</description>
    <label>Pedido Emitido</label>
    <referenceTo>OrderIssued__c</referenceTo>
    <relationshipLabel>Produtos do Pedido</relationshipLabel>
    <relationshipName>ProdutosPedido</relationshipName>
    <type>Lookup</type>
</CustomField>