force-app/main/default/objects/OrderProduct__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>Campo para armazenar o preço do produto vendido.</description>
    <label>Preço</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>