force-app/main/default/objects/OrderProduct__c/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <description>Código do produto recebido do Hybris.</description>
    <label>Código Produto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>