force-app/main/default/objects/OrderProduct__c/fields/ProductDescription__c.field-meta.xml
<CustomField>
    <fullName>ProductDescription__c</fullName>
    <description>Campo para armazenar a descrição do produto.</description>
    <label>Descrição Produto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>