force-app/main/default/objects/OrderProduct__c/fields/ProductExternalId__c.field-meta.xml
<CustomField>
    <fullName>ProductExternalId__c</fullName>
    <externalId>true</externalId>
    <label>Id Produto Hybris</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>