force-app/main/default/objects/OrderProduct__c/fields/User_Login__c.field-meta.xml
<CustomField>
    <fullName>User_Login__c</fullName>
    <formula>OrderIssued__r.Owner:User.Login__c</formula>
    <label>Login de Rede do Operador</label>
    <type>Text</type>
</CustomField>